# sink

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  icon.icns  icon.sh
src/: ansi_parser.cpp  ansi_parser.hpp  font_manager.cpp  font_manager.hpp  macos_menu.h  macos_menu.mm  main.cpp  pty_bridge.cpp  pty_bridge.hpp  settings_ui.cpp  settings_ui.hpp  terminal_grid.cpp  terminal_grid.hpp  video_engine.cpp  video_engine.hpp
